--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 .DS_Store
 node_modules/
-
+/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.idea/
-.project
+package-lock.json
+# Editor directories and files
+*/.idea
+*.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
