--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-babel": "^7.0.0",
     "gulp-changed": "^3.1.1",
     "gulp-concat": "^2.6.1",
-    "gulp-html-extend": "^1.1.6",
+    "gulp-file-include": "^2.0.1",
     "gulp-if": "^2.0.2",
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.5.0",
@@ -32,6 +32,9 @@
     "uglify-js": "^3.1.8"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-notify": "^3.0.0",
